--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,76 @@
 <div class="container">
-  <div class="user-details">
+  <div class="title">
     <h3> Featured Projects </h3>
   </div>
   <div class="row user-projects">
     <div class="six columns images">
-      <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+      <img alt="notarii" src="{{ "/assets/img/notarii.png" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> Project Title </h5>
-      <li> Featured Skills</li>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <a class="project-link" href="#">Check it out</a>
+      <h5>Notarii</h5>
+      <p>Complete information management system for notaries (ERP like) including generation, administration and doucment & receipt management</p>
+      <span class="tag">PHP</span>
+      <span class="tag">Mysql</span>
+      <span class="tag">Laravel</span>
+      <span class="tag">jQuery</span>
     </div>
   </div>
   <div class="row user-projects">
+    <div class="six columns images">
+      <img alt="netium" src="{{ "/assets/img/netium.png" | prepend: site.baseurl }}" />
+    </div>
+
     <div class="six columns">
-      <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+      <h5>Netium</h5>
+      <p>Provides an easy to use interface for customers to create their own custom websites</p>
+      <span class="tag">PHP</span>
+      <span class="tag">Laravel</span>
+      <span class="tag">Mysql</span>
+      <span class="tag">Mongodb</span>
+      <span class="tag">Dingo</span>
+      <span class="tag">Vue.js</span>
+    </div>
+  </div>
+  <div class="row user-projects">
+    <div class="six columns images">
+      <img alt="netium" src="{{ "/assets/img/journl.png" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> Project Title </h5>
-      <ul>
-        <li> Featured Skills</li>
-      </ul>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <a class="project-link" href="#">Check it out</a>
+      <h5>Journl</h5>
+      <p>Provides an easy to use interface for customers to create their own custom websites</p>
+      <span class="tag">Phoenix</span>
+      <span class="tag">Elixir</span>
+      <span class="tag">Postgresql</span>
+      <span class="tag">GraphQL</span>
+      <span class="tag">JWT</span>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="title">
+    <h3> GameDev </h3>
+  </div>
+  <div class="row user-projects">
+    <div class="six columns images">
+      <img alt="netium" src="{{ "/assets/img/herhackles.png" | prepend: site.baseurl }}" />
+    </div>
+    <div class="six columns">
+      <h5>Herhackles</h5>
+      <p>A mario-style game with a hacking-theme made for the “Github Game Off 2016” contest.</p>
+      <span class="tag">Godot</span>
+      <span class="tag">Gimp</span>
+    </div>
+  </div>
+  <div class="row user-projects">
+    <div class="six columns images">
+      <img alt="netium" src="{{ "/assets/img/black_hole.png" | prepend: site.baseurl }}" />
+    </div>
+    <div class="six columns">
+      <h5>Black Hole Escape</h5>
+      <p>A tap-style video game</p>
+      <span class="tag">Lua</span>
+      <span class="tag">Löve</span>
+      <span class="tag">Gimp</span>
     </div>
   </div>
 </div>
