--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@ $main: #1a222c;
 $sec: #4B5664;
 $purple: #54516A;
 $cut: 768px;
+$tag: #4E8098;
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
@@ -10,67 +11,52 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-@-webkit-keyframes pulse {
-    from {
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-        filter: alpha(opacity=40);
-        opacity: .4;
-        top: 0;
-    }
-    50% {
-        -ms-filter: none;
-        -webkit-filter: none;
-        filter: none;
-        opacity: 1;
-        top: -10px;
-    }
-    to {
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-        filter: alpha(opacity=40);
-        opacity: .4;
-        top: 0;
-    }
-}
-
-@keyframes pulse {
-    from {
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-        filter: alpha(opacity=40);
-        opacity: .4;
-        top: 0
-    }
-    50% {
-        -ms-filter: none;
-        -webkit-filter: none;
-        filter: none;
-        opacity: 1;
-        top: -10px
-    }
-    to {
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-        filter: alpha(opacity=40);
-        opacity: .4;
-        top: 0
-    }
-}
-
-#particles-js {
-  background: $main;
-  display: block;
-  vertical-align: bottom;
-  width: 100vw;
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  .particles-js-canvas-el {
-    width:100vw !important;
-    height:100vh !important;
-  }
-}
+//@-webkit-keyframes pulse {
+//    from {
+//        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+//        filter: alpha(opacity=40);
+//        opacity: .4;
+//        top: 0;
+//    }
+//    50% {
+//        -ms-filter: none;
+//        -webkit-filter: none;
+//        filter: none;
+//        opacity: 1;
+//        top: -10px;
+//    }
+//    to {
+//        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+//        filter: alpha(opacity=40);
+//        opacity: .4;
+//        top: 0;
+//    }
+//}
+//
+//@keyframes pulse {
+//    from {
+//        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+//        filter: alpha(opacity=40);
+//        opacity: .4;
+//        top: 0
+//    }
+//    50% {
+//        -ms-filter: none;
+//        -webkit-filter: none;
+//        filter: none;
+//        opacity: 1;
+//        top: -10px
+//    }
+//    to {
+//        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+//        filter: alpha(opacity=40);
+//        opacity: .4;
+//        top: 0
+//    }
+//}
 
 .content {
-  z-index: 1;
+  z-index: 0;
   text-align: center;
   color:#FFF;
   position: absolute;
@@ -108,6 +94,18 @@ body {
       font-size: 20px;
     }
   }
+}
+
+#header {
+  z-index: 10;
+  background: $main;
+  display: block;
+  vertical-align: bottom;
+  width: 100vw;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .icons-header {
@@ -185,10 +183,10 @@ body {
   }
 }
 
-.user-details {
+.title {
   text-align: center;
   font-size: 16px;
-  margin: 10px auto;
+  margin: 50px auto;
 }
 
 .user-projects {
@@ -196,7 +194,8 @@ body {
   img {
     max-width: 100%;
     height: auto;
-    border-radius: 5px;
+    //border-radius: 5px;
+    border: solid 1px #CCC;
   }
   h5 {
     margin: 0;
@@ -206,8 +205,16 @@ body {
     font-size: 1.1rem;
   }
   p {
-    margin-right: 5px;
+    margin-right: 10px;
   }
+}
+
+.tag {
+  font-size: 11px;
+  background-color: $tag;
+  //border-radius: 0.4rem;
+  padding: 0.5rem;
+  color: #FFF;
 }
 
 .images {
