--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -37,7 +37,7 @@
     </div>
     <div class="six columns">
       <h5>Journl</h5>
-      <p>Provides an easy to use interface for customers to create their own custom websites</p>
+      <p>Journl is a website for writing and publishing articles</p>
       <span class="tag">Phoenix</span>
       <span class="tag">Elixir</span>
       <span class="tag">Postgresql</span>
